--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
+title: Hannah's Homepage
+page-top-title: Hannah Guan
+top-section-bg-text: Ruijia (Hannah) Guan
+home-subtitle: Bio&ensp;|&ensp;官睿嘉
 copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
